Make env properties writable.
git-svn-id: https://dev.helma.org/svn/helma-ng/trunk@9608 688a9155-6ab5-4160-a077-9df41f55a9e9